# personalized-cold-email-generator

./: README.md  gitignore
backend/: README.md  pyproject.toml
backend/app/: agent.py  app.py  beatify.py  model.py  schema.py
backend/data/: captures.jsonl
backend/data/html/: capture-20260403T071907104235Z-0ed55a4d525f41c6b2b45cd6dffbb44c.html  capture-20260403T173709143788Z-4982d774d162493fac07b28798f6053e.html  capture-20260404T192557087835Z-4d64dbc9eea8453499ab6784c7a5d8dc.html  capture-20260404T194224225074Z-dd3bcda7f0ce4884b9f76fa0d2e3e2b9.html  capture-20260404T194325749957Z-7979a123091b450ca610a9a1f9e09d1a.html  capture-20260404T195446558287Z-67e1fcdc96eb4e9185d66f49a11cf601.html  capture-20260404T203240478244Z-f98d1844dc4f44edb72aa38d5adba9c3.html
frontend/: README.md  package.json  popup-BEfMpk3C.css  popup.html  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: style.css
frontend/src/popup/: App.vue
