[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"fastapi>=0.115.12",
	"aiosqlite>=0.21.0",
	"sqlalchemy>=2.0.40",
	"uvicorn>=0.34.0",
	"greenlet>=3.3.2",
	"bs4>=0.0.2",
	"dotenv>=0.9.9",
	"ollama>=0.6.1",
]
